# openapi/auth.json
@@ -656,6 +656,41 @@
                 }
             }
         },
+        "/api/admin/v1/projects/{project}/permissions": {
+            "get": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "GET /api/admin/v1/projects/{project}/permissions",
+                "operationId": "auth_index_api_admin_v1_projects_project_permissions",
+                "parameters": [
+                    {
+                        "name": "project",
+                        "in": "path",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/admin/v1/projects": {
             "get": {
                 "tags": [
